# amd-ipmi-oem

./: .gitignore  MAINTAINERS  README.md  meson.build  meson_options.txt
src/: amd_oem.cpp  amd_oem.hpp  meson.build
